# lingua-sensei

./: .gitignore  README.md
api/: manage.py  pyproject.toml
api/config/: asgi.py  settings.py  urls.py  wsgi.py
api/lingua_sensei/: asgi.py  settings.py  urls.py  wsgi.py
api/linguist/: admin.py  asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
api/linguist/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/linguist/core/migrations/: 0001_initial.py
api/linguist/migrations/: 0001_initial.py
web/: astro.config.mjs  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vitest.config.ts
web/playwright/: demo.test.ts
web/src/components/: index.test.ts
web/src/pages/: index.astro
web/src/routes/: +layout.ts
